--- a/html/index.html
+++ b/html/index.html
@@ -270,7 +270,21 @@
         <div class="card-reveal highlight">
           <span class="card-title white-text text-darken-4">Project Links:<i class="material-icons right">close</i></span>
           <div class="card primary z-depth-5">
-            <p>Budgethack - 'Budget 2.0'</p>
+            <p>GovHack 2017 - 'The IP Gods'</p>
+            <ul>
+              <li><a target="_blank" href="http://ipgod.tech/">Application</a></li>
+              <li><a target="_blank" href="https://github.com/The-IP-Gods/The-IP-Gods">Source Code</a></li>
+              <li><a target="_blank" href="https://www.youtube.com/watch?v=WOffryi1BjI">Video</a></li>
+            </ul>
+          </div>
+          <div class="card primary z-depth-5">
+            <p>Research Bazzar - 'Data Story Hackathon'</p>
+            <ul>
+              <li><a target="_blank" href="https://github.com/PuZZleDucK/Twitter_Sentiment_Analysis">Source Code</a></li>
+            </ul>
+          </div>
+          <div class="card primary z-depth-5">
+            <p>BudgetHack - 'Budget 2.0'</p>
             <ul>
               <li><a target="_blank" href="https://budget-2point0.herokuapp.com/">Application</a></li>
               <li><a target="_blank" href="https://github.com/PuZZleDucK/Budget-2.0">Source Code</a></li>
@@ -278,22 +292,22 @@
             </ul>
           </div>
           <div class="card primary z-depth-5">
-            <p>Govhack</p>
+            <p>GovHack 2015 - 'Exploring Indigenous Culture'</p>
             <ul>
-              <li><a target="_blank" href="http://threeletternames.github.io/GovHack2015/">GovHack - 'Exploring Indigenous Culture'</a></li>
+              <li><a target="_blank" href="http://threeletternames.github.io/GovHack2015/">HTML5 Application</a></li>
               <li><a target="_blank" href="https://www.youtube.com/watch?v=m39MWbq8Mjs">Final Video</a></li>
             </ul>
           </div>
           <div class="card primary z-depth-5">
-            <p>Random Hacks of Kindness</p>
+            <p>Random Hacks of Kindness - 'Melbourne Maker Map'</p>
             <ul>
-              <li><a target="_blank" href="https://rhokaustralia.github.io/melb-maker-map/index.html">RHoK - 'Melbourne Maker Map'</a></li>
+              <li><a target="_blank" href="https://rhokaustralia.github.io/melb-maker-map/index.html">Application</a></li>
             </ul>
           </div>
           <div class="card primary z-depth-5">
-            <p>Civic Hack</p>
+            <p>Visualize Melbourne Civic Hack - 'ASCII Art Histogram'</p>
             <ul>
-              <li><a target="_blank" href="https://www.youtube.com/watch?v=mWw6YKwDufQ">Visualize Melbourne - 'ASCII Art Histogram'</a></li>
+              <li><a target="_blank" href="https://www.youtube.com/watch?v=mWw6YKwDufQ">Video Presentation</a></li>
             </ul>
           </div>
         </div>
