--- a/html/index.html
+++ b/html/index.html
@@ -305,7 +305,7 @@
             </ul>
           </div>
           <div class="card primary z-depth-5">
-            <p>Visualize Melbourne Civic Hack - 'ASCII Art Histogram'</p>
+            <p>Visualize Melbourne Hack - 'ASCII Art Histogram'</p>
             <ul>
               <li><a target="_blank" href="https://www.youtube.com/watch?v=mWw6YKwDufQ">Video Presentation</a></li>
             </ul>
