--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
     </ul>
     <nav>
        <div class="nav-wrapper primary">
-          <a href="http://puzzleduck.org" class="brand-logo center">PuZZleDucK</a>
+          <a href="https://puzzleduck.org" class="brand-logo center">PuZZleDucK</a>
           <ul id="nav-mobile" class="right">
              <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
           </ul>
@@ -54,7 +54,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/CfA_Logo_black.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/CfA_Logo_black.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">Working with the Victorian Department of Treasury and Finance our team built a system for collecting contracting information from external sources, enabling a digital workflow for reporting and demonstrating agile methodologies ...</p>
@@ -87,7 +87,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/fsf.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/fsf.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">I have been an organizer of Free Software Melbourne since 2013, I often present our regular Gnews segment, along with preparing outreach materials, and running events throughout the year ...</p>
@@ -142,7 +142,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/tux.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/tux.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">I wanted to know how the nitty gritty of a FOSS system worked and the Linux kernel and the GNU environment were great projects to learn from. Contributing to the kernel has been a rewarding experience with many important lessons I have documented in blog posts ...</p>
@@ -167,7 +167,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/hardware.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/hardware.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">Through my interest in 3D printing I began exploring electronics, and have developed a few 3D models that may be of use to the DIY electronics enthusiast. I also have a collection of videos documenting my successes in printing and building a 3D printer from scratch...</p>
@@ -214,7 +214,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/duke.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/duke.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">Java was the first programming language I learned and it taught me many good (and bad) habbits. Android was a natural fusion of Java and Linux for my skillset; the android applications I've written are avaliable on the play store under the company "PuZZleDucK Industries" ...</p>
@@ -242,7 +242,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/HTML_5.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/HTML_5.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">The web is the new desktop - which means these must be my "new desktop apps". Click to see pure HTML5 in all it's glory, including a character frequency analyzer ...</p>
@@ -262,7 +262,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/gnu.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/gnu.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">I've participated in a few hackathons in my day, and despite the poor quality and hasty workmanship, I'm still proud of the results. From cultural awareness to citizen budgeting ...</p>
@@ -319,7 +319,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/reprap.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/reprap.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">This was an old project that enabled customized RepRaps to connect to a central server, to report local conditions, and retrieve instructions. It is now decommissioned and only kept here as a reminder of fun times ...</p>
@@ -349,7 +349,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/Haskell_Logo.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/Haskell_Logo.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">Learning Haskell could have been the best descision of my life. It brought relevance and utility to four years of dedicated study of logic, and opened up a world of possibilities in maths ...</p>
@@ -372,7 +372,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/cards.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/cards.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">I performed electronic gaming machine testing and regulatory compliance for almost a decade and have given a few presentations on the topic ...</p>
@@ -394,7 +394,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/openscad.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/openscad.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">The possibilities for 3D printing today are just amazing, and it invigorated my interest in all thing electronic. 3D printing has opened up the possibility for me to design and create truly unique objects ...</p>
@@ -425,7 +425,7 @@
           <hr />
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/right_to_know.png" alt="icon">
+          <img class="right small activator" height="100" src="https://puzzleduck.org/img/right_to_know.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">Through the RightToKnow project, I have made a few Freedom of Information requests to the Victorian and federal governments. Click here to see 10 years of contracting data released to the public ...</p>
