--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="home page">
   <meta name="author" content="PuZZleDucK">
   <title>PuZZleDucK dot org</title>
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <link type="text/css" rel="stylesheet" href="css/puzzleduck.css" media="screen,projection"/>
