--- a/html/index.html
+++ b/html/index.html
@@ -186,17 +186,17 @@
           <div class="card primary z-depth-5">
             <p>Instructables</p>
             <ul>
-              <li><a target="_blank" href="http://www.instructables.com/id/8-Bit-Arduino-Valentines-Heart/">8-Bit Arduino Heart</a></li>
-              <li><a target="_blank" href="http://www.instructables.com/id/-Arduinolitics-Google-Analytics-on-Arduino/">Arduinolitics - Analytics on Arduino</a></li>
+              <li><a target="_blank" href="https://www.instructables.com/id/8-Bit-Arduino-Valentines-Heart/">8-Bit Arduino Heart</a></li>
+              <li><a target="_blank" href="https://www.instructables.com/id/-Arduinolitics-Google-Analytics-on-Arduino/">Arduinolitics - Analytics on Arduino</a></li>
             </ul>
           </div>
           <div class="card primary z-depth-5">
             <p>Thingiverse</p>
             <ul>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:121099">Open Hardware Logo for PCB Vice</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:236948">Freetronics LeoStick bumper/header</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:225255">DIY Header Pins</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:180982">DIY LED diffuser</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:121099">Open Hardware Logo for PCB Vice</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:236948">Freetronics LeoStick bumper/header</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:225255">DIY Header Pins</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:180982">DIY LED diffuser</a></li>
             </ul>
           </div>
         </div>
@@ -294,7 +294,7 @@
           <div class="card primary z-depth-5">
             <p>GovHack 2015 - 'Exploring Indigenous Culture'</p>
             <ul>
-              <li><a target="_blank" href="http://threeletternames.github.io/GovHack2015/">HTML5 Application</a></li>
+              <li><a target="_blank" href="https://threeletternames.github.io/GovHack2015/">HTML5 Application</a></li>
               <li><a target="_blank" href="https://www.youtube.com/watch?v=m39MWbq8Mjs">Final Video</a></li>
             </ul>
           </div>
@@ -404,16 +404,16 @@
           <div class="card primary z-depth-5">
             <ul>
               <li><a target="_blank" href="https://www.youtube.com/watch?v=ti1k5np3VnA">Video - OpenSCAD spiral layout</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:247649">Robjects - Toyota headrest mount (Diesel powered Arduino!)</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:240652">Toyota headrest camera mount</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:246633">Electric Valentine - 8 Bit Arduino Heart</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:225261">OpenSCAD - Top Hat</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:156052">Font - Kirsty</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:149838">Back To School Set - 'The Castle'</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:140495">Steampunk Glasses Lense Mod</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:130875">Fluid Circuit - Caterpillar/Bug/Bee</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:114084">Festive Cracker Printability and Scale Mod</a></li>
-              <li><a target="_blank" href="http://www.thingiverse.com/thing:140519">Printable 'Signal White Cane'</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:247649">Robjects - Toyota headrest mount (Diesel powered Arduino!)</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:240652">Toyota headrest camera mount</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:246633">Electric Valentine - 8 Bit Arduino Heart</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:225261">OpenSCAD - Top Hat</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:156052">Font - Kirsty</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:149838">Back To School Set - 'The Castle'</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:140495">Steampunk Glasses Lense Mod</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:130875">Fluid Circuit - Caterpillar/Bug/Bee</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:114084">Festive Cracker Printability and Scale Mod</a></li>
+              <li><a target="_blank" href="https://www.thingiverse.com/thing:140519">Printable 'Signal White Cane'</a></li>
             </ul>
           </div>
         </div>
