update script and content

--- a/html/DevAdventures/da01.html
+++ b/html/DevAdventures/da01.html
@@ -1,5 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="home page">
+  <meta name="author" content="PuZZleDucK">
+  <title>PuZZleDucK dot org</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="css/puzzleduck.css" media="screen,projection"/>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+
+<body class="white-text grey lighten-3">
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js" defer></script>
+  <script type="text/javascript" src="js/materialize.min.js" defer></script>
+
 <h2 class='date-header'><span>Sunday, 19 August 2012</span></h2>
- 
+
 <div class='post-outer'>
 <div class='post hentry' itemprop='blogPost' itemscope='itemscope' itemtype='http://schema.org/BlogPosting'>
 <meta content='5339381179705770999' itemprop='blogId'/>
@@ -105,3 +125,16 @@ No comments:
 </div>
 </div>
 </div>
+
+
+  <footer class="page-footer highlight title">
+     <div class="footer-copyright">
+        <div class="container">
+           © 2017 <a href="mailto:puzzleduck@gmail.com">PuZZleDucK</a>
+           <a class="grey-text text-lighten-4 right" target="_blank" href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a>
+        </div>
+     </div>
+  </footer>
+
+</body>
+</html>
