update script fine tuning

--- a/html/DevAdventures/da01.html
+++ b/html/DevAdventures/da01.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="description" content="home page">
   <meta name="author" content="PuZZleDucK">
-  <title>PuZZleDucK dot org</title>
+  <title>Orbital Live Wallpaper</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-  <link type="text/css" rel="stylesheet" href="css/puzzleduck.css" media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="../css/puzzleduck.css" media="screen,projection"/>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
