--- a/html/DevAdventures/da01.html
+++ b/html/DevAdventures/da01.html
@@ -20,6 +20,11 @@
 
 <h2 class='date-header'><span>Sunday, 19 August 2012</span></h2>
 
+<div class="col s12 l4 cards-container">
+
+
+
+
 <div class='post-outer'>
 <div class='post hentry' itemprop='blogPost' itemscope='itemscope' itemtype='http://schema.org/BlogPosting'>
 <meta content='5339381179705770999' itemprop='blogId'/>
@@ -124,6 +129,11 @@ No comments:
 </div>
 </div>
 </div>
+</div>
+
+
+
+
 </div>
 
 
