--- a/html/DevAdventures/da01.html
+++ b/html/DevAdventures/da01.html
@@ -20,7 +20,7 @@
 
 <h2 class='date-header'><span>Sunday, 19 August 2012</span></h2>
 
-<div class="col s12 l4 cards-container">
+<div class="col s12 l4 primary cards-container">
 
 
 
