update blog links

--- a/html/index.html
+++ b/html/index.html
@@ -223,14 +223,14 @@
           <span class="card-title white-text text-darken-4">Blogs:<i class="material-icons right">close</i></span>
           <div class="card primary z-depth-5">
             <ul>
-              <li><a target="_blank" href="DevAdventures/da01.html">01 - Orbital Live Wallpaper</a></li>
-              <li><a target="_blank" href="DevAdventures/da02.html">02 - Data retention</a></li>
-              <li><a target="_blank" href="DevAdventures/da03.html">03 - XDA Developers "BASH Obsfucation Contest" entry</a></li>
-              <li><a target="_blank" href="DevAdventures/da04.html">04 - Embedding page data in a link</a></li>
-              <li><a target="_blank" href="DevAdventures/da05.html">05 - Gosling's nightmares</a></li>
-              <li><a target="_blank" href="DevAdventures/da06.html">06 - Git yourself a schooling</a></li>
-              <li><a target="_blank" href="DevAdventures/da07.html">07 - An array without bounds (more Gosling nightmares)</a></li>
-              <li><a target="_blank" href="DevAdventures/da08.html">08 - Lambdas and LEDs</a></li>
+              <li><a target="_blank" href="https://goo.gl/GGjHLK">Lambdas and LEDs</a></li>
+              <li><a target="_blank" href="https://goo.gl/oeze25">Gosling's nightmares</a></li>
+              <li><a target="_blank" href="https://goo.gl/43jkCn">An array without bounds (more Gosling nightmares)</a></li>
+              <li><a target="_blank" href="https://goo.gl/k1xfb1">XDA Developers "BASH Obsfucation Contest" entry</a></li>
+              <li><a target="_blank" href="https://goo.gl/BqpYdv">Orbital Live Wallpaper</a></li>
+              <li><a target="_blank" href="https://goo.gl/9xrZfP">Data retention</a></li>
+              <li><a target="_blank" href="https://goo.gl/gWuY7Y">Embedding page data in a link</a></li>
+              <li><a target="_blank" href="https://goo.gl/6exuvb">Git yourself a schooling</a></li>
             </ul>
           </div>
         </div>
