update links to kernel blogs

--- a/html/index.html
+++ b/html/index.html
@@ -151,11 +151,11 @@
           <span class="card-title white-text text-darken-4">Blogs:<i class="material-icons right">close</i></span>
           <div class="card primary z-depth-5">
             <ul>
-              <li><a target="_blank" href="Linux/linux01.html">Linux Work 01 - Intro/Resourses</a></li>
-              <li><a target="_blank" href="Linux/linux02.html">Linux Work 02 - Belkin Serial Patch</a></li>
-              <li><a target="_blank" href="Linux/linux03.html">Linux Work 03 - Keyspan Serial Patch</a></li>
-              <li><a target="_blank" href="Linux/linux04.html">Linux Work 04 - Documentation Fix</a></li>
-              <li><a target="_blank" href="Linux/linux05.html">Linux Work 05 - Eudyptula Challenge</a></li>
+              <li><a target="_blank" href="https://goo.gl/7ZPQyr">Linux Work 01 - Intro/Resourses</a></li>
+              <li><a target="_blank" href="https://goo.gl/4E8d9R">Linux Work 02 - Belkin Serial Patch</a></li>
+              <li><a target="_blank" href="https://goo.gl/TYEyAN">Linux Work 03 - Keyspan Serial Patch</a></li>
+              <li><a target="_blank" href="https://goo.gl/xxFP2W">Linux Work 04 - Documentation Fix</a></li>
+              <li><a target="_blank" href="https://goo.gl/ET4Epj">Linux Work 05 - Eudyptula Challenge</a></li>
             </ul>
           </div>
         </div>
