--- a/html/index.html
+++ b/html/index.html
@@ -252,6 +252,8 @@
           <div class="card primary z-depth-5">
             <p>D3 Projects</p>
             <a target="_blank" href="HTML5/D3/character-frequency/CharacterFrequency.html">D3: Live Character Frequency Analysis</a>
+            <p>P5 Projects</p>
+            <a target="_blank" href="puzzleduck.github.io/mazing/index.html">P5: Automatic Maze Generator and Solver</a>
           </div>
         </div>
       </div>
