--- a/html/index.html
+++ b/html/index.html
@@ -253,7 +253,7 @@
             <p>D3 Projects</p>
             <a target="_blank" href="HTML5/D3/character-frequency/CharacterFrequency.html">D3: Live Character Frequency Analysis</a>
             <p>P5 Projects</p>
-            <a target="_blank" href="puzzleduck.github.io/mazing/index.html">P5: Automatic Maze Generator and Solver</a>
+            <a target="_blank" href="https://puzzleduck.github.io/mazing/index.html">P5: Automatic Maze Generator and Solver</a>
           </div>
         </div>
       </div>
