Update CfA links

--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
           <div class="card primary z-depth-5">
             <p>The final live project:</p>
             <ul>
-              <li><a target="_blank" href="https://cfa-dtf.herokuapp.com/">Deployed Version</a></li>
+              <li><a target="_blank" href="https://codeforaustralia.org/project/construction-contracts-register/">Cofe for Australia project site</a></li>
               <li><a target="_blank" href="https://codeforaustralia.github.io/DTF-Blog/">Blog and Documentation</a></li>
               <li><a target="_blank" href="https://github.com/PuZZleDucK/dtf-genesis">Source Code</a></li>
             </ul>
