--- a/html/index.html
+++ b/html/index.html
@@ -233,7 +233,7 @@
           <div class="card primary z-depth-5">
             <p>GovHack 2017 - 'The IP Gods'</p>
             <ul>
-              <li><a target="_blank" href="http://ipgod.tech/">Application</a></li>
+              <li><a target="_blank" href="http://ip-gods.herokuapp.com/">Application</a></li>
               <li><a target="_blank" href="https://github.com/The-IP-Gods/The-IP-Gods">Source Code</a></li>
               <li><a target="_blank" href="https://www.youtube.com/watch?v=WOffryi1BjI">Video</a></li>
             </ul>
